--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,16 @@ input[type="email"] {
   border-radius: 50%;
   background-color: red;
 }
+.view{
+  border: 1px solid #191F6B;
+}
+.cv{
+  border: 1px solid #191F6B;
+}
+
+.career {
+  padding-top: 60px;
+  height: 250px;
+  /* background-image: linear-gradient(to top, #1F234E , yellow); */
+  background-image: linear-gradient(#321F234E, white   , #321F234E);
+}
