--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,11 @@ input[type="email"] {
 }
 
 .career {
-  padding-top: 60px;
+  padding-top: 50px;
   height: 250px;
   /* background-image: linear-gradient(to top, #1F234E , yellow); */
   background-image: linear-gradient(#321F234E, white   , #321F234E);
+}
+.point{
+  cursor: pointer;
 }
